# Slotify

./: .env.example  .gitignore  API_TEST_RESULTS.md  CHANGELOG.md  Cargo.toml  DJ_MODE_TESTING.md  FIXES_APPLIED.md  FULL_WORKFLOW_TEST_RESULTS.md  GUI_REORGANIZATION.md  Makefile  Projektziele.md  README.md  ROADMAP.md  SESSION_RECORDER_ANALYSIS.md  instructionsForClaude
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  SESSION_RECORDER_INTEGRATION.md
examples/: simple_test.rs  test_integration_offline.rs  test_session_recorder_integration.rs
migrations/: 20240101000001_initial.sql  20240102000001_add_session_recorder_integration.sql  20240103000001_add_event_sessions.sql
src/: lib.rs  main.rs
src/api/: admin_routes.rs  dj_routes.rs  event_routes.rs  lottery_routes.rs  mod.rs  session_recorder_routes.rs  session_routes.rs
src/gui/: api_client.rs  app.rs  main.rs
src/gui/components/: mod.rs
src/gui/modes/: admin_mode.rs  dj_mode.rs  guest_mode.rs  mod.rs
src/models/: dj.rs  event_session.rs  lottery.rs  mod.rs  session.rs
src/services/: dj_service.rs  email_service.rs  event_service.rs  lottery_service.rs  mod.rs  session_recorder_service.rs  session_service.rs
src/utils/: file_utils.rs  mod.rs  time_utils.rs  validation.rs
tests/: dj_service_tests.rs  lottery_tests.rs  session_tests.rs
